examples/type_system/failing/190_contextual_boundary_arg_runtime_e1004.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E1004: runtime boundary mismatch from module-qualified dynamic source into typed argument.

import TypeSystem.BoundaryUnknown

fn typed_add(a: Int, b: Int) -> Int {
    a + b
}

let dynamic = TypeSystem.BoundaryUnknown.dynamic_string()
typed_add(dynamic, 1)
